Sync site generated files
Signed-off-by: tison <wander4096@gmail.com>

--- a/site-src/implementations/v1.0.md
+++ b/site-src/implementations/v1.0.md
@@ -18,25 +18,25 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 | Organization    | Project                            | Version       | HTTPRoute Method Matching   | HTTPRoute Query Param Matching   | HTTPRoute Response Header Modification   | HTTPRoute Backend Timeout   | HTTPRoute Port Redirect   | HTTPRoute Path Redirect   | HTTPRoute Host Rewrite   | HTTPRoute Scheme Redirect   | HTTPRoute Path Rewrite   | HTTPRoute Parent Ref Port   | HTTPRoute Request Mirror   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Request Timeout   |
 |:----------------|:-----------------------------------|:--------------|:----------------------------|:---------------------------------|:-----------------------------------------|:----------------------------|:--------------------------|:--------------------------|:-------------------------|:----------------------------|:-------------------------|:----------------------------|:---------------------------|:-------------------------------------|:----------------------------|
-| Kong            | kubernetes-ingress-controller      | v3.0.2        | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
-| Kong            | kubernetes-ingress-controller      | v3.1.1        | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
-| Microsoft Azure | Application Gateway for Containers | v1.0.0        | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :x:                         | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :x:                        | :x:                                  | :x:                         |
-| cilium          | cilium                             | v1.15.0-pre.3 | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :white_check_mark:          | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| envoyproxy      | envoy-gateway                      | v0.6.0        | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| istio           | istio                              | 1.2           | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| kumahq          | kuma                               | 2.6.0         | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :x:                         | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :x:                                  | :x:                         |
-| nginx           | nginx-gateway-fabric               | v1.1.0        | :white_check_mark:          | :white_check_mark:               | :x:                                      | :x:                         | :white_check_mark:        | :x:                       | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :x:                        | :x:                                  | :x:                         |
-| nginx           | nginx-gateway-fabric               | v1.2.0        | :white_check_mark:          | :white_check_mark:               | :x:                                      | :x:                         | :white_check_mark:        | :x:                       | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :x:                        | :x:                                  | :x:                         |
-| projectcontour  | contour                            | v1.28.1       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.28.2       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.28.3       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.28.4       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.28.5       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.28.6       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.29.0       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.29.1       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| projectcontour  | contour                            | v1.29.2       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          |
-| solo.io         | gloo-gateway                       | v1.17.4       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                       | :x:                         | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       | :white_check_mark:          | :white_check_mark:       | :x:                         | :white_check_mark:         | :x:                                  | :x:                         |
+| Kong            | kubernetes-ingress-controller      | v3.0.2        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| Kong            | kubernetes-ingress-controller      | v3.1.1        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| Microsoft Azure | Application Gateway for Containers | v1.0.0        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| cilium          | cilium                             | v1.15.0-pre.3 | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| envoyproxy      | envoy-gateway                      | v0.6.0        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| istio           | istio                              | 1.2           | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| kumahq          | kuma                               | 2.6.0         | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| nginx           | nginx-gateway-fabric               | v1.1.0        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| nginx           | nginx-gateway-fabric               | v1.2.0        | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.1       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.2       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.3       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.4       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.5       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.28.6       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.29.0       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.29.1       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| projectcontour  | contour                            | v1.29.2       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
+| solo.io         | gloo-gateway                       | v1.17.4       | :x:                         | :x:                              | :x:                                      | :x:                         | :x:                       | :x:                       | :x:                      | :x:                         | :x:                      | :x:                         | :x:                        | :x:                                  | :x:                         |
 
 ## Mesh Profile
 
@@ -44,5 +44,5 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 | Organization   | Project   | Version   | HTTPRoute Request Timeout   | HTTPRoute Path Redirect   | HTTPRoute Request Mirror   | HTTPRoute Path Rewrite   | HTTPRoute Method Matching   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Backend Timeout   | HTTPRoute Response Header Modification   | HTTPRoute Port Redirect   | HTTPRoute Scheme Redirect   | HTTPRoute Host Rewrite   | HTTPRoute Query Param Matching   |
 |:---------------|:----------|:----------|:----------------------------|:--------------------------|:---------------------------|:-------------------------|:----------------------------|:-------------------------------------|:----------------------------|:-----------------------------------------|:--------------------------|:----------------------------|:-------------------------|:---------------------------------|
-| istio          | istio     | 1.2       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:         | :white_check_mark:       | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:        | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               |
-| kumahq         | kuma      | 2.6.0     | :x:                         | :white_check_mark:        | :white_check_mark:         | :white_check_mark:       | :white_check_mark:          | :x:                                  | :x:                         | :white_check_mark:                       | :white_check_mark:        | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               |
+| istio          | istio     | 1.2       | :x:                         | :x:                       | :x:                        | :x:                      | :x:                         | :x:                                  | :x:                         | :x:                                      | :x:                       | :x:                         | :x:                      | :x:                              |
+| kumahq         | kuma      | 2.6.0     | :x:                         | :x:                       | :x:                        | :x:                      | :x:                         | :x:                                  | :x:                         | :x:                                      | :x:                       | :x:                         | :x:                      | :x:                              |
