--- a/site-src/implementations/v1.1.md
+++ b/site-src/implementations/v1.1.md
@@ -24,10 +24,10 @@ Implementations only appear in this page if they pass Core conformance for the r
 | Kong            | kubernetes-ingress-controller      | v3.2.0             | expressions                      | :x:                 | :white_check_mark:       | :x:                       | :x:                        | :white_check_mark:                       | :x:                         | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :x:                       | :x:                         | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
 | Kong            | kubernetes-ingress-controller      | v3.3.1             | expressions                      | :x:                 | :white_check_mark:       | :x:                       | :x:                        | :white_check_mark:                       | :x:                         | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :x:                       | :x:                         | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
 | Microsoft Azure | Application Gateway for Containers | 1.3.7              | default                          | :x:                 | :white_check_mark:       | :white_check_mark:        | :x:                        | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :x:                         | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
-| airlock         | microgateway                       | 4.5.0              | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
+| airlock         | microgateway                       | 4.5.0              | default                          | :white_check_mark:  | :white_check_mark:       | :x:                       | :x:                        | :x:                                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
 | airlock         | microgateway                       | 4.6.0              | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
 | airlock         | microgateway                       | 4.7.0              | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
-| airlock         | microgateway                       | v4.4.0             | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
+| airlock         | microgateway                       | v4.4.0             | default                          | :white_check_mark:  | :x:                      | :x:                       | :x:                        | :x:                                      | :x:                         | :white_check_mark:          | :x:                      | :white_check_mark:               | :x:                       | :white_check_mark:          | :x:                               | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                  | :x:                         |
 | cilium          | cilium                             | v1.16.0            | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:          |
 | envoyproxy      | envoy-gateway                      | v1.1.0             | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :x:                              | :x:                                     | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:          |
 | istio           | istio                              | 1.22               | default                          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :x:                              | :x:                                     | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:          |
