--- a/site-src/implementations/v1.2.md
+++ b/site-src/implementations/v1.2.md
@@ -18,10 +18,10 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 | Organization    | Project                            | Version   | Mode                   | HTTPRoute Host Rewrite   | HTTPRoute Path Rewrite   | HTTPRoute Response Header Modification   | HTTPRoute Method Matching   | HTTPRoute Query Param Matching   | HTTPRoute Destination Port Matching   | HTTPRoute Path Redirect   | HTTPRoute Port Redirect   | HTTPRoute Scheme Redirect   | Gateway Infrastructure Propagation   | Gateway Port 8080   | HTTPRoute Backend Protocol H2C   | HTTPRoute Backend Protocol Web Socket   | HTTPRoute Backend Timeout   | HTTPRoute Parent Ref Port   | HTTPRoute Request Timeout   | Gateway HTTP Listener Isolation   | Gateway Static Addresses   | HTTPRoute Backend Request Header Modification   | HTTPRoute Request Mirror   | HTTPRoute Request Multiple Mirrors   |
 |:----------------|:-----------------------------------|:----------|:-----------------------|:-------------------------|:-------------------------|:-----------------------------------------|:----------------------------|:---------------------------------|:--------------------------------------|:--------------------------|:--------------------------|:----------------------------|:-------------------------------------|:--------------------|:---------------------------------|:----------------------------------------|:----------------------------|:----------------------------|:----------------------------|:----------------------------------|:---------------------------|:------------------------------------------------|:---------------------------|:-------------------------------------|
-| Kong            | kubernetes-ingress-controller      | v3.4.0    | traditional_compatible | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :x:                       | :x:                       | :x:                         | :x:                                  | :x:                 | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
+| Kong            | kubernetes-ingress-controller      | v3.4.0    | traditional_compatible | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :x:                         | :x:                              | :x:                                   | :x:                       | :x:                       | :x:                         | :x:                                  | :x:                 | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | Kong            | kubernetes-ingress-controller      | v3.4.0    | expressions            | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :x:                       | :x:                       | :x:                         | :x:                                  | :x:                 | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | Microsoft Azure | Application Gateway for Containers | 1.7.9     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :x:                                  | :x:                 | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
-| airlock         | microgateway                       | 4.5.0     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
+| airlock         | microgateway                       | 4.5.0     | default                | :white_check_mark:       | :white_check_mark:       | :x:                                      | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :x:                       | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | airlock         | microgateway                       | 4.6.0     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | airlock         | microgateway                       | 4.7.0     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | cilium          | cilium                             | v1.17     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :x:                         | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :white_check_mark:                              | :white_check_mark:         | :white_check_mark:                   |
@@ -29,7 +29,8 @@ Implementations only appear in this page if they pass Core conformance for the r
 | istio           | istio                              | 1.24      | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :white_check_mark:                              | :white_check_mark:         | :white_check_mark:                   |
 | kgateway-dev    | kgateway                           | v2.0.0    | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :x:                                  | :x:                 | :white_check_mark:               | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :white_check_mark:         | :x:                                  |
 | kubvernor       | kubvernor                          | 0.1.0     | default                | :x:                      | :x:                      | :x:                                      | :x:                         | :x:                              | :x:                                   | :x:                       | :x:                       | :x:                         | :x:                                  | :x:                 | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
-| nginx           | nginx-gateway-fabric               | v1.6.0    | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :white_check_mark:                | :x:                        | :x:                                             | :white_check_mark:         | :white_check_mark:                   |
+| nginx           | nginx-gateway-fabric               | 2.2.0     | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :x:                              | :white_check_mark:                      | :x:                         | :white_check_mark:          | :x:                         | :white_check_mark:                | :x:                        | :x:                                             | :white_check_mark:         | :white_check_mark:                   |
+| nginx           | nginx-gateway-fabric               | v1.6.0    | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :x:                                  | :white_check_mark:  | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
 | nginx           | nginx-gateway-fabric               | v2.0.2    | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :x:                              | :x:                                     | :x:                         | :x:                         | :x:                         | :white_check_mark:                | :x:                        | :x:                                             | :white_check_mark:         | :white_check_mark:                   |
 | projectcontour  | contour                            | v1.31.0   | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:          | :white_check_mark:          | :white_check_mark:          | :white_check_mark:                | :white_check_mark:         | :white_check_mark:                              | :white_check_mark:         | :white_check_mark:                   |
 | traefik         | traefik                            | v3.2.2    | default                | :white_check_mark:       | :white_check_mark:       | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:               | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:          | :x:                                  | :white_check_mark:  | :white_check_mark:               | :white_check_mark:                      | :x:                         | :x:                         | :x:                         | :x:                               | :x:                        | :x:                                             | :x:                        | :x:                                  |
@@ -45,7 +46,8 @@ Implementations only appear in this page if they pass Core conformance for the r
 | envoyproxy      | envoy-gateway                      | latest    | default                | :x:                               | :x:                                  | :x:                 | :x:                        |
 | istio           | istio                              | 1.24      | default                | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | kubvernor       | kubvernor                          | 0.1.0     | default                | :x:                               | :x:                                  | :x:                 | :x:                        |
-| nginx           | nginx-gateway-fabric               | v1.6.0    | default                | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| nginx           | nginx-gateway-fabric               | 2.2.0     | default                | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| nginx           | nginx-gateway-fabric               | v1.6.0    | default                | :x:                               | :x:                                  | :x:                 | :x:                        |
 | nginx           | nginx-gateway-fabric               | v2.0.2    | default                | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | projectcontour  | contour                            | v1.31.0   | default                | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | traefik         | traefik                            | v3.2.2    | default                | :x:                               | :x:                                  | :x:                 | :x:                        |
@@ -57,7 +59,8 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium               | v1.17     | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | envoyproxy     | envoy-gateway        | latest    | default | :x:                               | :x:                                  | :x:                 | :x:                        |
 | istio          | istio                | 1.24      | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
-| nginx          | nginx-gateway-fabric | v1.6.0    | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| nginx          | nginx-gateway-fabric | 2.2.0     | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| nginx          | nginx-gateway-fabric | v1.6.0    | default | :x:                               | :x:                                  | :x:                 | :x:                        |
 | nginx          | nginx-gateway-fabric | v2.0.2    | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | projectcontour | contour              | v1.31.0   | default | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | traefik        | traefik              | v3.2.2    | default | :x:                               | :x:                                  | :x:                 | :x:                        |
