--- a/site-src/implementations/v1.3.md
+++ b/site-src/implementations/v1.3.md
@@ -16,20 +16,22 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project              | Version        | Mode             | Gateway Address Empty   | Gateway HTTP Listener Isolation   | Gateway Infrastructure Propagation   | Gateway Port 8080   | Gateway Static Addresses   | HTTPRoute Backend Protocol H2C   | HTTPRoute Backend Protocol Web Socket   | HTTPRoute Backend Request Header Modification   | HTTPRoute Backend Timeout   | HTTPRoute Destination Port Matching   | HTTPRoute Host Rewrite   | HTTPRoute Method Matching   | HTTPRoute Parent Ref Port   | HTTPRoute Path Redirect   | HTTPRoute Path Rewrite   | HTTPRoute Port Redirect   | HTTPRoute Query Param Matching   | HTTPRoute Request Mirror   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Request Percentage Mirror   | HTTPRoute Request Timeout   | HTTPRoute Response Header Modification   | HTTPRoute Scheme Redirect   |
-|:---------------|:---------------------|:---------------|:-----------------|:------------------------|:----------------------------------|:-------------------------------------|:--------------------|:---------------------------|:---------------------------------|:----------------------------------------|:------------------------------------------------|:----------------------------|:--------------------------------------|:-------------------------|:----------------------------|:----------------------------|:--------------------------|:-------------------------|:--------------------------|:---------------------------------|:---------------------------|:-------------------------------------|:--------------------------------------|:----------------------------|:-----------------------------------------|:----------------------------|
-| agentgateway   | agentgateway         | v0.6.0-dev     | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| airlock        | microgateway         | 4.6.0          | default          | :x:                     | :x:                               | :white_check_mark:                   | :white_check_mark:  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                        | :x:                                  | :x:                                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| airlock        | microgateway         | 4.7.0          | default          | :x:                     | :x:                               | :white_check_mark:                   | :white_check_mark:  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                        | :x:                                  | :x:                                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| cilium         | cilium               | main           | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :x:                         | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| envoyproxy     | envoy-gateway        | v1.5.0         | GatewayNamespace | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| envoyproxy     | envoy-gateway        | v1.5.0         | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| istio          | istio                | 1.26.1         | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| kgateway-dev   | kgateway             | v2.1.0-main    | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :x:                                   | :white_check_mark:       | :white_check_mark:          | :x:                         | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :x:                                  | :x:                                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          |
-| nginx          | nginx-gateway-fabric | v2.0.0         | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        | :x:                              | :white_check_mark:                      | :x:                                             | :x:                         | :x:                                   | :white_check_mark:       | :white_check_mark:          | :x:                         | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :x:                         | :white_check_mark:                       | :white_check_mark:          |
-| nginx          | nginx-gateway-fabric | v2.1.0         | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        | :x:                              | :white_check_mark:                      | :x:                                             | :x:                         | :x:                                   | :white_check_mark:       | :white_check_mark:          | :x:                         | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:                    | :x:                         | :white_check_mark:                       | :white_check_mark:          |
-| sigs.k8s.io    | cloud-provider-kind  | v0.8.0-alpha.1 | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                   | :x:                      | :x:                         | :x:                         | :x:                       | :x:                      | :x:                       | :x:                              | :x:                        | :x:                                  | :x:                                   | :x:                         | :x:                                      | :x:                         |
-| traefik        | traefik              | v3.5           | default          | :x:                     | :x:                               | :x:                                  | :white_check_mark:  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :x:                         | :white_check_mark:                    | :white_check_mark:       | :white_check_mark:          | :x:                         | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                        | :x:                                  | :x:                                   | :x:                         | :white_check_mark:                       | :white_check_mark:          |
+| Organization   | Project              | Version            | Mode             | Gateway Port 8080   | HTTPRoute Host Rewrite   | HTTPRoute Path Redirect   | HTTPRoute Request Mirror   | HTTPRoute Request Percentage Mirror   | HTTPRoute Response Header Modification   | HTTPRoute Scheme Redirect   | Gateway Address Empty   | Gateway HTTP Listener Isolation   | Gateway Infrastructure Propagation   | Gateway Static Addresses   | HTTPRoute Backend Protocol H2C   | HTTPRoute Backend Protocol Web Socket   | HTTPRoute Backend Request Header Modification   | HTTPRoute Backend Timeout   | HTTPRoute Destination Port Matching   | HTTPRoute Method Matching   | HTTPRoute Parent Ref Port   | HTTPRoute Path Rewrite   | HTTPRoute Port Redirect   | HTTPRoute Query Param Matching   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Request Timeout   |
+|:---------------|:---------------------|:-------------------|:-----------------|:--------------------|:-------------------------|:--------------------------|:---------------------------|:--------------------------------------|:-----------------------------------------|:----------------------------|:------------------------|:----------------------------------|:-------------------------------------|:---------------------------|:---------------------------------|:----------------------------------------|:------------------------------------------------|:----------------------------|:--------------------------------------|:----------------------------|:----------------------------|:-------------------------|:--------------------------|:---------------------------------|:-------------------------------------|:----------------------------|
+| GKE            | gke-gateway          | 1.33.4-gke.1134000 | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :x:                     | :x:                               | :x:                                  | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                   | :x:                         | :x:                         | :x:                      | :x:                       | :x:                              | :x:                                  | :x:                         |
+| agentgateway   | agentgateway         | v0.6.0-dev         | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :white_check_mark:          |
+| airlock        | microgateway         | 4.6.0              | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :x:                                   | :white_check_mark:                       | :white_check_mark:          | :x:                     | :x:                               | :white_check_mark:                   | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                                  | :white_check_mark:          |
+| airlock        | microgateway         | 4.7.0              | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :x:                                   | :white_check_mark:                       | :white_check_mark:          | :x:                     | :x:                               | :white_check_mark:                   | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                                  | :white_check_mark:          |
+| cilium         | cilium               | main               | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :x:                         | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :white_check_mark:          |
+| envoyproxy     | envoy-gateway        | v1.5.0             | GatewayNamespace | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :x:                        | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :white_check_mark:          |
+| envoyproxy     | envoy-gateway        | v1.5.0             | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :x:                                  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :white_check_mark:          |
+| istio          | istio                | 1.26.1             | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:         | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :white_check_mark:          |
+| kgateway-dev   | kgateway             | v2.1.0-main        | default          | :x:                 | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :x:                                   | :white_check_mark:                       | :white_check_mark:          | :x:                     | :x:                               | :x:                                  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :white_check_mark:          | :x:                                   | :white_check_mark:          | :x:                         | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                                  | :white_check_mark:          |
+| nginx          | nginx-gateway-fabric | 2.2.0              | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:         | :x:                              | :white_check_mark:                      | :x:                                             | :x:                         | :white_check_mark:                    | :white_check_mark:          | :white_check_mark:          | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :x:                         |
+| nginx          | nginx-gateway-fabric | v2.0.0             | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :x:                                   | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                   | :white_check_mark:          | :x:                         | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :x:                         |
+| nginx          | nginx-gateway-fabric | v2.1.0             | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :white_check_mark:         | :white_check_mark:                    | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :x:                        | :x:                              | :white_check_mark:                      | :x:                                             | :x:                         | :x:                                   | :white_check_mark:          | :x:                         | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:                   | :x:                         |
+| sigs.k8s.io    | cloud-provider-kind  | v0.8.0-alpha.1     | default          | :x:                 | :x:                      | :x:                       | :x:                        | :x:                                   | :x:                                      | :x:                         | :x:                     | :x:                               | :x:                                  | :x:                        | :x:                              | :x:                                     | :x:                                             | :x:                         | :x:                                   | :x:                         | :x:                         | :x:                      | :x:                       | :x:                              | :x:                                  | :x:                         |
+| traefik        | traefik              | v3.5               | default          | :white_check_mark:  | :white_check_mark:       | :white_check_mark:        | :x:                        | :x:                                   | :white_check_mark:                       | :white_check_mark:          | :x:                     | :x:                               | :x:                                  | :x:                        | :white_check_mark:               | :white_check_mark:                      | :x:                                             | :x:                         | :white_check_mark:                    | :white_check_mark:          | :x:                         | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :x:                                  | :x:                         |
 
 ### GRPCRoute
 
@@ -37,8 +39,9 @@ Implementations only appear in this page if they pass Core conformance for the r
 |:---------------|:---------------------|:----------|:-----------------|:------------------------|:----------------------------------|:-------------------------------------|:--------------------|:---------------------------|
 | cilium         | cilium               | main      | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | envoyproxy     | envoy-gateway        | v1.5.0    | GatewayNamespace | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
-| envoyproxy     | envoy-gateway        | v1.5.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| envoyproxy     | envoy-gateway        | v1.5.0    | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        |
 | istio          | istio                | 1.26.1    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
+| nginx          | nginx-gateway-fabric | 2.2.0     | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | nginx          | nginx-gateway-fabric | v2.0.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | nginx          | nginx-gateway-fabric | v2.1.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | traefik        | traefik              | v3.5      | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        |
@@ -49,8 +52,9 @@ Implementations only appear in this page if they pass Core conformance for the r
 |:---------------|:---------------------|:----------|:-----------------|:------------------------|:----------------------------------|:-------------------------------------|:--------------------|:---------------------------|
 | cilium         | cilium               | main      | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | envoyproxy     | envoy-gateway        | v1.5.0    | GatewayNamespace | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
-| envoyproxy     | envoy-gateway        | v1.5.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
+| envoyproxy     | envoy-gateway        | v1.5.0    | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        |
 | istio          | istio                | 1.26.1    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
+| nginx          | nginx-gateway-fabric | 2.2.0     | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :white_check_mark:         |
 | nginx          | nginx-gateway-fabric | v2.0.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | nginx          | nginx-gateway-fabric | v2.1.0    | default          | :white_check_mark:      | :white_check_mark:                | :white_check_mark:                   | :white_check_mark:  | :x:                        |
 | traefik        | traefik              | v3.5      | default          | :x:                     | :x:                               | :x:                                  | :x:                 | :x:                        |
