chore: Update for 1.5.0-rc.2
Signed-off-by: Flynn <emissary@flynn.kodachi.com>

--- a/CHANGELOG/1.5-CHANGELOG.md
+++ b/CHANGELOG/1.5-CHANGELOG.md
@@ -2,7 +2,25 @@
 
 ## Table of Contents
 
+- [v1.5.0-rc.2](#v150-rc2)
 - [v1.5.0-rc.1](#v150-rc1)
+
+# v1.5.0-rc.2
+
+## Changes Since v1.5.0-rc.1
+
+- CORS Origin values are now validated by CEL to disallow unsupported values in the host portion ([#4595], @DamianSawicki -- see discussion in [#3648])
+- Fixed the safe-upgrades ValidatingAdmissionPolicy to allow upgrades of experimental CRDs ([#4578], @snorwin)
+- Replace `omitempty` with `omitzero` for `supportedKinds` in ListenerStatus to preserve backward compatibility for controllers reconciling older Gateway API versions. ([#4556], @snorwin)
+- Add the missing `ListenersNotValid` programmed reason for listenerSets ([#4589], @davidjumani)
+- The default polling interval for conformance tests has been decreased. This can be modified by the new DefaultPollInterval. ([#4599], @howardjohn)
+
+[#3648]: https://github.com/kubernetes-sigs/gateway-api/issues/3648
+[#4595]: https://github.com/kubernetes-sigs/gateway-api/pull/4595
+[#4578]: https://github.com/kubernetes-sigs/gateway-api/pull/4578
+[#4556]: https://github.com/kubernetes-sigs/gateway-api/pull/4556
+[#4589]: https://github.com/kubernetes-sigs/gateway-api/pull/4589
+[#4599]: https://github.com/kubernetes-sigs/gateway-api/pull/4599
 
 # v1.5.0-rc.1
 
