--- a/CHANGELOG/1.5-CHANGELOG.md
+++ b/CHANGELOG/1.5-CHANGELOG.md
@@ -2,8 +2,17 @@
 
 ## Table of Contents
 
+- [v1.5.0-rc.2](#v150-rc3)
 - [v1.5.0-rc.2](#v150-rc2)
 - [v1.5.0-rc.1](#v150-rc1)
+
+# v1.5.0-rc.3
+
+## Changes Since v1.5.0-rc.2
+
+- Fixed an issue where the ValidatingAdmissionPolicy prevented experimental CRDs from being installed at all (instead of only when standard CRDs already exist). ([#4604] @howardjohn)
+
+[#4604]: https://github.com/kubernetes-sigs/gateway-api/pull/4603
 
 # v1.5.0-rc.2
 
